--- a/Login/Login.csproj
+++ b/Login/Login.csproj
@@ -155,6 +155,12 @@
     <Compile Include="MenuPrincipal.Designer.cs">
       <DependentUpon>MenuPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="ParaFer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ParaFer.Designer.cs">
+      <DependentUpon>ParaFer.cs</DependentUpon>
+    </Compile>
     <Compile Include="PerfilUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -211,6 +217,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MenuPrincipal.resx">
       <DependentUpon>MenuPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ParaFer.resx">
+      <DependentUpon>ParaFer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PerfilUsuario.resx">
       <DependentUpon>PerfilUsuario.cs</DependentUpon>
@@ -403,6 +412,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="dating-app.ico" />
+    <None Include="Resources\igcdZW.gif" />
+    <None Include="Resources\tonto.png" />
+    <None Include="Resources\bombero.png" />
+    <None Include="Resources\probeta.png" />
+    <None Include="Resources\pill-button-purple-1473311.png" />
+    <None Include="Resources\pill-button-purple-147331.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.118.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.118.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
